--- a/src/components/Readings.css
+++ b/src/components/Readings.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
-
+/* @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One"); */
+@import url('https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap');
 /*Typography
 --------------------------------------------------------------*/
-body,
+/* body,
 button,
 input,
 select,
@@ -11,20 +11,36 @@ textarea {
   font-family: "Comfortaa", Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
-}
+ 
+} */
 
 body {
-    padding: 0 3rem;
+    
+    /* padding: 0 3rem; */
+    background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Patua One", serif;
-  letter-spacing: 2px;
+h1, h2, h3, h4, h5, h6, p, div, button {
+  /* font-family: "Patua One", serif;
+  letter-spacing: 2px; */
+  color: #fff;
+  text-shadow: 1px 1px 7px rgba(46, 0, 252, 0.971);
+  
+  /* font-family: "Comic Sans MS", sans-serif; */
+  font-family: 'Uncial Antiqua', sans-serif;
+  letter-spacing: 3px;
+  
+  
 }
 
-p {
+
+/* p {
   margin-bottom: 1.5em;
-}
+} */
 
 .title--main {
   margin-block-end: 0;
