--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -1,5 +1,10 @@
 .h1, h1 {
     font-size: 2.5rem;
+    background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 10vh;
 }
 
 fieldset {
@@ -7,25 +12,37 @@ fieldset {
     padding: 1rem 0;
     margin: 0;
     border: 0;
+   
 }
 
 .form--login {
-    display: inline-block;
+    /* display: inline-block; */
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
+    
+    
 }
 
 .form--login > fieldset > input[type="email"] {
     width: 25em;
+    
+    
 }
 
 .label--login {
     width: 8rem;
     display: inline-block;
+    
+    
+    
+    
 }
 
 .form-control {
+    
     display: block;
+    
+    align-items: center;
     width: 94%;
     height: calc(1.5em + .75rem + 2px);
     padding: .375rem .75rem;
@@ -33,7 +50,7 @@ fieldset {
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: .25rem;
@@ -43,6 +60,15 @@ fieldset {
 
 .container--login {
     text-align: center;
+    display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  padding: 20px;
 }
 
 .form--login {
@@ -53,6 +79,7 @@ fieldset {
     background-color: hsla(0,0%,100%,0.40);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
+    
 }
 
 .button--close {
