--- a/src/components/clients/Client.css
+++ b/src/components/clients/Client.css
@@ -1,14 +1,18 @@
-.customers {
+.client {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
-.customers {
-    background-color: hotpink;
+.clients {
+    /* background-color: hotpink;
     border: 2px dotted fuchsia;
     color: black;
     padding: 0.5rem;
-    margin: 0.5rem;
+    margin: 0.5rem; */
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: 'Uncial Antiqua', sans-serif;
+    letter-spacing: 3px;
 }
