--- a/src/components/employees/Employees.css
+++ b/src/components/employees/Employees.css
@@ -6,9 +6,13 @@
 }
 
 .employee {
-    background-color: hotpink;
+    /* background-color: hotpink;
     border: 2px dotted fuchsia;
     color: black;
     padding: 0.5rem;
-    margin: 0.5rem;
+    margin: 0.5rem; */
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: "Comic Sans MS", sans-serif;
+    letter-spacing: 3px;
 }
