--- a/src/components/clients/Client.css
+++ b/src/components/clients/Client.css
@@ -3,6 +3,19 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    color: rgb(238, 238, 238);
+    text-shadow: 2px 2px 4px rgba(251, 250, 250, 0.5);
+    /* background-image: url('file:///Users/nelsonlumpkin/Downloads/zodiac-4367961.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+      display: flex;
+      flex-wrap: wrap;
+      background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; */
 }
 
 .clients {
@@ -11,8 +24,25 @@
     color: black;
     padding: 0.5rem;
     margin: 0.5rem; */
-    color: #fff;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    color: rgb(218, 71, 191);
+    text-shadow: 2px 2px 4px rgba(228, 220, 220, 0.5);
     font-family: 'Uncial Antiqua', sans-serif;
     letter-spacing: 3px;
 }
+
+/* body {
+    
+    background-image: url('file:///Users/nelsonlumpkin/Downloads/zodiac-4367961.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+      display: flex;
+      flex-wrap: wrap;
+      background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    
+  } */
+
