--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,50 +1,75 @@
 .navbar {
-    /* display: flex;
-    flex-wrap: nowrap;
-    justify-content: left;
-    color: #fff;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    font-family: "Comic Sans MS", sans-serif;
-    letter-spacing: 3px; */
-    display: flex;
+
+  display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
-  background-color: #fcf9f9;
-  /* box-shadow: 2px 2px 4px rgba(75, 59, 216, 0.3); */
-  box-shadow: 1px 1px 7px rgba(46, 0, 252, 0.971);
+  padding: 0px;
+  border: none;
+  /* background-color:  rgb(254, 244, 244); */
+  border-radius: 100px;
   
+  box-shadow: 1px 6px 75px 6px rgba(101, 86, 235, 0.826);
+
   
+
+
+
 }
 
 .navbar__item {
-    /* flex-basis: 20%;
-    list-style-type: none; */
-    background-color: #fff;
-  /* color: rgb(3, 3, 3); */
-  border-radius: 20px;
-  padding: 10px 20px;
+
+  /* background-color: rgb(254, 244, 244); */
+  color:rgba(255, 255, 255, 0.826);
+  border-radius: 200px;
+  /* padding: 10px 20px; */
   font-size: 18px;
   border: none;
   box-shadow: 2px 2px 4px rgba(500, 500, 500, 500);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-  margin-left: 20px;
-  
+  margin-left: 2px;
+  box-shadow: 1px 6px 75px  rgba(101, 86, 235, 0.826);
+  text-shadow: 1px 2px 10px  rgba(46, 0, 252, 0.971);
+  /* border: solid black; */
 }
 
 .navbar__logout {
-    /* margin-left: auto;
-    display: flex;
-    align-items: center; */
-    background-color: #fff;
-    /* color: rgb(3, 3, 3); */
-    border-radius: 20px;
-    padding: 10px 20px;
-    font-size: 18px;
-    border: none;
-    box-shadow: 2px 2px 4px rgba(500, 500, 500, 500);
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    margin-left: 20px;
+  
+
+  border-radius: 200px;
+  padding: 0px;
+  font-size: 18px;
+
+  /* box-shadow: 2px 2px 4px rgba(500, 500, 500, 500); */
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  margin-left: 2px;
+  box-shadow: 1px 6px 75px 6px rgba(101, 86, 235, 0.826);
+  text-shadow: 1px 2px 10px  rgba(46, 0, 252, 0.971);
+ 
 }
+
+.navbar__link {
+  text-shadow: 1px 2px 10px  rgba(46, 0, 252, 0.971);
+  color: 1px 6px 75px 6px rgba(101, 86, 235, 0.826);
+  /* border: solid black; */
+  border: 2px solid;
+
+  background-color: rgb(237, 237, 176);
+  border-radius: 100px;
+  
+
+  padding: 10px 60px;
+  font-size: 18px;
+
+  box-shadow: 2px 2px 4px rgba(500, 500, 500, 500);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  margin-left: 2px;
+  box-shadow: 1px 6px 75px 35px rgba(101, 86, 235, 0.826);
+  text-shadow: 1px 2px 10px 35px rgba(46, 0, 252, 0.971);
+  /* border: solid black; */
+  
+  
+}
+
