--- a/src/components/tickets/Tickets.css
+++ b/src/components/tickets/Tickets.css
@@ -1,38 +1,57 @@
 .tickets {
-   
-    /* flex-direction: column; */
-   display: flex;
+
+  /* flex-direction: column; 
+  display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url('file:///Users/nelsonlumpkin/Downloads/zodiac-4367961.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center; */
+
+  display: flex;
+  flex-wrap: wrap;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
+ /* body{
+  flex-direction: column; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url('file:///Users/nelsonlumpkin/Downloads/zodiac-4367961.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
+} */
 .ticket {
-    /* background-color: rgb(214, 184, 241);
-    border: ipx dotted darkmagenta;
-    padding: 0.7rem;
-    margin: 0.5rem 0; */
-    background-color: #fff;
+  background-color: rgb(250, 249, 171);
   color: #000;
   border-radius: 20px;
   padding: 10px 20px;
   font-size: 18px;
-  border: none;
+  border: solid black;
   margin-top: 20px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+
 }
 
 .ticket__delete {
 
-    /* margin-left: auto;
-    background-color: lightcoral; */
-    background-color: #fff;
+
+  background-color: #fff;
   color: #000;
   border-radius: 20px;
   padding: 10px 20px;
   font-size: 18px;
-  border: none;
+  border: solid black;
   margin-top: 20px;
   text-shadow: 1px 1px 7px rgba(46, 0, 252, 0.971);
   cursor: pointer;
@@ -40,14 +59,14 @@
 }
 
 .ticket__finish {
-    /* margin-left: auto; */
-   
-    background-color: #fff;
+
+
+  background-color: #fff;
   color: #000;
   border-radius: 20px;
   padding: 10px 20px;
   font-size: 18px;
-  border: none;
+  border: solid black;
   margin-top: 20px;
   text-shadow: 1px 1px 7px rgba(46, 0, 252, 0.971);
   cursor: pointer;
@@ -55,13 +74,10 @@
 }
 
 .ticket__footer {
-    /* display: flex;
-    padding: 1rem 0 0 0;
-    border-top: 1px dashed darkmagenta;
-    margin: 1rem 0 0 0; */
-    display: flex;
-    
-    background-color: #fff;
+
+  display: flex;
+
+  background-color: #fff;
   color: #000;
   border-radius: 20px;
   padding: 10px 20px;
@@ -72,14 +88,14 @@
   text-shadow: 1px 1px 7px rgba(46, 0, 252, 0.971);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-   
+
 }
 
 .ticket__header {
-    /* font-size: large;
+  /* font-size: large;
     padding: 0 0 1rem 0; */
-   
-    background-color: #fff;
+
+  background-color: rgb(0, 0, 0);
   color: #000;
   border-radius: 20px;
   padding: 10px 20px;
@@ -90,14 +106,40 @@
   text-shadow: 1px 1px 7px rgba(46, 0, 252, 0.971);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-   
+
 }
 
-h1, h2, h3, .label, .div, .form-group {
-    background-color: #fdfcfd;
+h1,
+h2,
+h3,
+.label,
+.div,
+.form-group,
+.button,
+main {
+  background-color:  rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  text-shadow: 5px 7px 10px rgba(47, 0, 255, 0.971);
+  justify-content: center;
+  height: 8vh;
+  border-radius: 10px;
+
+
+}
+
+
+/* body {
+    background-image: url('file:///Users/nelsonlumpkin/Downloads/zodiac-4367961.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+      display: flex;
+      flex-wrap: wrap;
+      background-color: #ffffff;
     display: flex;
     align-items: center;
-    text-shadow: 1px 1px 7px rgba(46, 0, 252, 0.971);
     justify-content: center;
-    height: 10vh;
-}
+    height: 100vh;
+    
+  } */
