--- a/src/components/tickets/Tickets.css
+++ b/src/components/tickets/Tickets.css
@@ -123,11 +123,20 @@ main {
   text-shadow: 5px 7px 10px rgba(47, 0, 255, 0.971);
   justify-content: center;
   height: 8vh;
-  border-radius: 10px;
+  border-radius: 1px;
 
 
 }
 
+.form-group {
+  border: 1px solid;
+  border-radius: 100px;
+  padding: 0px;
+  box-shadow: 1px 6px 75px 6px rgba(101, 86, 235, 0.826);
+  padding: 0px 20px;
+
+  
+}
 
 /* body {
     background-image: url('file:///Users/nelsonlumpkin/Downloads/zodiac-4367961.svg');
